# cosmic_slider

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.pip
base/models/: __init__.py  bases.py
config/: settings.py  urls.py
slider/: admin.py  views.py
slider/migrations/: 0001_initial.py  0002_alter_slider_order.py
slider/models/: __init__.py  sliders.py
slider/templates/slider/: home.html
